# robot_dynamic_ctl_demo

./: LICENSE  MUJOCO_LOG.TXT  README.md  pyproject.toml
rm_control/: __init__.py
rm_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rm_control/assets/: __init__.py  benchmark_scene.xml
rm_control/assets/franka_emika_panda/: panda.xml
rm_control/assets/overseas_65_b_v_description/: cnv_urdf2xml.py  diag.py  model_for_mujoco.urdf  read_urdf_mj.py
rm_control/assets/overseas_65_b_v_description/.catkin_tools/: realman_mujoco.urdf
rm_control/controllers/: control.py  controllers.py  ctc_controller.py  joint_pd.py
rm_control/dynamics/: dynamics.py  mujoco_dynamics.py  pinocchio_dynamics.py
rm_control/planning/: trajectory.py  trajectory_generator.py
rm_control/result/: __init__.py
rm_control/results/: __init__.py
rm_control/simulation/: load_model.py  sim_interface.py
rm_control/utils/: benchmark.py  plotter.py  trajectory.py
scripts/: 1_PD_TEST.py  2_ctc_test.py  3_ctc_with_friction.py  4_ctc_with_payload.py  5_pid_ctc.py  6_MO_ctc.py  7_MO_ctc_sin_traj.py  8_impedance_ctrl.py  9_impedance_traj_tracking.py  benchmark_controller.py  pd_ctrl.ipynb  readme.md  run_joint_pd.py  test_sim.py  控制算法.md
tests/: check.py  check_jacobian.py  contact_diag.py  convert_urdf2xml.py  debug_mismatch.py  diag.py  osc_ctrl.py  payload_visual.py  run_joint_pd.py  t1.py  test.py  test1.py  test2.py  test3.py  test4.py  test_benchmark.py  test_ctc.py  test_ctc2.py  test_ctc3.py  test_pin.py  test_pose_control.py  test_sim.py  test_step_ctrl.py  test_task_space.py
(+11 files in other folders)
